# AndPass

./: .clang-format  .gitmodules  README.md  build-andpass.sh  build-bzip2.sh  build-jsonc.sh  build-libgit2.sh  build-openssl.sh  build-rnp.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/debug/assets/pgp-test/: private-key.asc  public-key.asc
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sneakyshiba/andpass/: GitSettingsFragment.kt  GitSettingsStore.kt  HomeFragment.kt  MainActivity.kt  PasswordFragment.kt  PgpKeyStore.kt  PgpSettingsFragment.kt  TestFragment.kt
app/src/main/res/drawable/: ic_menu_24.xml  nav_popup_background.xml
app/src/main/res/layout/: activity_main.xml  dialog_decrypt_passphrase.xml  dialog_decrypted_password.xml  dialog_navigation.xml  fragment_git_settings.xml  fragment_home.xml  fragment_passwords.xml  fragment_pgp_settings.xml  fragment_tests.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
